# silico

./: .gitignore  AGENTS.md  BEDSIDE.md  CLAUDE.md  MANIFEST.in  README.md  bedside.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: _make_social_preview.py
experiments/c_backend/: README.md  RESULTS.md  identity.py  probe.py
outreach/: 2026-07-friends-intro-email.md
silico/: __init__.py  agents_stage.py  backend.py  board_profile.py  c_toolchain.py  cli.py  config_toml.py  deploy.py  deploy_idf.py  deploy_types.py  doctor.py  esptool_util.py  first_flash.py  gate_c.py  host_hygiene.py  identity.py  inspect_device.py  monitor.py  mpremote_util.py  mpy_pin.py  partition_data.py  parts.py  ports.py  product_path.py  progress.py  pull_device.py  runtime.py  scaffold.py  serial_identity.py  session.py  wait_device.py  welcome.py  workspace.py
silico/boards/: m5go.toml  xiao-rp2040.toml
silico/knowledge/: INDEX.md  README.md  board-profiles.md  deploy-assets.md  esp32-audio.md  esp32-lcd-ips.md  esp32-usb-serial.md  first-flash.md  m5-core.md  (+3 more)
specs/: gcu-codenames.md  lexicon.md  plan-esp32-c-backend.md  prfaq.md  silicov1.md  tenets.md  wb-2026-fall-three-gcus.md  wb-2027-defacto-edge-spine.md
tests/: test_agents_stage.py  test_board_profile.py  test_c_toolchain.py  test_config_toml.py  test_deploy_idf.py  test_deploy_plan_yes.py  test_gate_c.py  test_host_hygiene.py  test_identity.py  test_mpy_pin.py  test_partition_data.py  test_parts.py  test_ports.py  test_product_path.py  test_progress_and_flash.py  test_pull_parse.py  test_runtime.py  test_scaffold_and_cli.py  test_serial_identity.py  test_session.py  test_welcome.py  test_workspace.py
(+24 files in other folders)
