[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name on PyPI must be unique. Brand/CLI remain "silico".
# Do not use bare "silico" — that name is already taken by an unrelated package.
name = "tig-silico"
# Bump when packaging rename ships; plate pins must point at a ref with this metadata.
version = "0.1.4"
description = "Prompt for metal: host spine for agent-authored edge products (GCUs)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Tig Kindel" }]
dependencies = [
  "pyserial>=3.5",
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
device = ["mpremote>=1.24"]

[project.scripts]
silico = "silico.cli:main"

[project.urls]
Homepage = "https://github.com/tig/silico"
Issues = "https://github.com/tig/silico/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["silico*"]

[tool.setuptools.package-data]
# Source templates only - never ship host bytecode into customer GCUs.
silico = [
  "plates/**/*.py",
  "plates/**/*.md",
  "plates/**/*.toml",
  "plates/**/*.ini",
  "plates/**/*.txt",
  "plates/**/*.yml",
  "plates/**/*.yaml",
  "plates/**/.gitignore",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
